ui/css/floppyui.css
.accordion-button:not(.collapsed) {
    background: #f8f9fa !important;
}

#root > div > nav {
    margin-bottom: 0.25em;
}

/* Used in tables with a cog icon/dropdown menu */
.cog div.dropdown button {
    line-height: 1;
    margin: 0;
    padding: 0;
    width: 3em;
}

.volumeInfo {
    top: 0;
    height: 10em;
}

.folder > span {
    display: inline-block;
    width: 100%;
}

.folder > span:hover {
    background: rgba(0, 0, 0, .05);
}

.folder > span > svg {
    width: 1.5em !important;
}

.folder > span > .fileLabel {
    margin-left: .5em;
    display: inline-block;
}

.folder > div {
    margin-left: 0.7em;
    padding-left: 0.75em;
}

.folder:not(:last-child) > div {
    border-left: 1px dashed black;
}

.card {
    margin-bottom: 0.25em;
}

.consolePanel {
    overflow-y: hidden;
    overflow-x: auto;
    padding-bottom: .2em;
}

.consolePanel .consoleLine {
    font-family: monospace, Monospaced;
    font-size: 1em;
    height: calc(1em + 1px);
    display: block;
    width: 80em;
}

